# roboscribe

./: pyproject.toml
roboscribe/: __init__.py  config.py  transcript_processor.py
