[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roboscribe"
version = "0.1.0"
description = "AI-powered transcription and text processing tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "whisperx==3.4.2",
    "accelerate",
]

[project.scripts]
roboscribe = "roboscribe.__main__:main"

[tool.setuptools.packages.find]
include = ["roboscribe*"]