[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roboscribe"
version = "0.1.0"
description = "AI-powered transcription and text processing tool"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
  "torch==2.6.0",
  "torchvision==0.21.0",
  "transformers>=4.30.0,<5.0.0",
  "whisperx==3.4.2",
  "accelerate",
  "numpy>=1.26.0,<2.2.0",
  "pandas>=2.0,<2.2.4",
  "protobuf>=3.20.3,<6.0.0",
  "jedi>=0.16",
  "scikit-learn>=1.2,<1.7",
  "fsspec>=2023.1.0,<=2025.3.0",
  "rich>=12.4.4,<14.0.0",
]

[project.scripts]
roboscribe = "roboscribe.__main__:main"

[tool.setuptools.packages.find]
include = ["roboscribe*"]
